syntax = "proto3";
package auth;

option go_package = "../auth_grpc";

//トークンで認証
message AuthToken {
    string token = 1;
	string UserAgent = 2;
}

//認証結果
message AuthResult {
    bool success = 1;
    User user = 2;
}

//認証結果
message RefreshResult {
    bool success = 1;
    string token = 2;
}

//ユーザ
message User {
    //ユーザID
	string UserID = 1;

	//プロバイダ
	string Provider = 2;

	//プロバイダのユーザID
	string ProviderUserId = 3;

	//名前
	string Name = 4;

	//ニックネーム
	string NickName = 5;

	//苗字
	string LastName = 6;

	//名
	string FirstName = 7;

	//アイコンURL
	string AvatarURL = 8;

	//メールアドレス
	string Email = 9;

	//説明
	string Description = 10;
}

//トークン取得
message Secret {
    string token = 1;
	string Secret = 2;	
}

//トークンデータ
message TokenData {
    string token = 1;
	bool success = 2;
}

message Result {
	bool success = 1;
}

service AuthServer {
	rpc Auth(AuthToken) returns (AuthResult) {}
    rpc GetToken(Secret) returns (TokenData) {}
	rpc Refresh(AuthToken) returns (RefreshResult) {}
	rpc Submit(AuthToken) returns (RefreshResult) {}
	rpc Logout(AuthToken) returns (Result) {}
}